Add notifications service and abnormality display component

--- a/AquAnalyzerWebApp/Components/_Imports.razor
+++ b/AquAnalyzerWebApp/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using AquAnalyzerWebApp
 @using AquAnalyzerWebApp.Components
+@using AquAnalyzerWebApp.Interfaces
+@using AquAnalyzerAPI.Models
