--- a/AquAnalyzerWebApp/Components/Pages/Register.razor
+++ b/AquAnalyzerWebApp/Components/Pages/Register.razor
@@ -1,6 +1,7 @@
 @page "/register"
 @using AquAnalyzerAPI.Model
 @using AquAnalyzerAPI.Services
+@using AquAnalyzer.Interfaces
 @inject IAuthService AuthService
 @inject NavigationManager NavigationManager
 
