--- a/AquAnalyzerWebApp/Components/Pages/Login.razor
+++ b/AquAnalyzerWebApp/Components/Pages/Login.razor
@@ -1,6 +1,7 @@
 @page "/login"
 @using System.Security.Claims
 @using AquAnalyzerAPI.Services
+@using AquAnalyzer.Interfaces
 @inject IAuthService AuthService
 @inject NavigationManager NavigationManager
 
