--- a/AquAnalyzerWebApp/Components/Pages/Register.razor
+++ b/AquAnalyzerWebApp/Components/Pages/Register.razor
@@ -1,8 +1,8 @@
 @page "/register"
-@using AquAnalyzerAPI.Model
+@using AquAnalyzerAPI.Models
 @using AquAnalyzerAPI.Services
-@using AquAnalyzer.Interfaces
-@inject IAuthService AuthService
+@using AquAnalyzerAPI.Interfaces
+@inject IAuthServiceAPI AuthService
 @inject NavigationManager NavigationManager
 
 <h1>Register</h1>
@@ -62,10 +62,28 @@
 }
 
 @code {
-    private User newUser = new User();
+    private User? newUser;
     private string selectedRole = "Analyst";
     private string? errorMessage;
     private bool showModal = false;
+
+    protected override void OnInitialized()
+    {
+        // Default to Analyst role
+        SetUserModel();
+    }
+
+    private void SetUserModel()
+    {
+        if (selectedRole == "Analyst")
+        {
+            newUser = new Analyst();
+        }
+        else if (selectedRole == "VisualDesigner")
+        {
+            newUser = new VisualDesigner();
+        }
+    }
 
     private async Task RegisterUser()
     {
@@ -75,9 +93,9 @@
             {
                 var analyst = new Analyst
                 {
-                    Username = newUser.Username,
-                    Email = newUser.Email,
-                    Password = newUser.Password,
+                    Username = newUser?.Username,
+                    Email = newUser?.Email,
+                    Password = newUser?.Password,
                     Role = "Analyst"
                 };
                 await AuthService.RegisterAnalystAsync(analyst);
@@ -86,9 +104,9 @@
             {
                 var visualDesigner = new VisualDesigner
                 {
-                    Username = newUser.Username,
-                    Email = newUser.Email,
-                    Password = newUser.Password,
+                    Username = newUser?.Username,
+                    Email = newUser?.Email,
+                    Password = newUser?.Password,
                     Role = "VisualDesigner"
                 };
                 await AuthService.RegisterVisualDesignerAsync(visualDesigner);
@@ -109,4 +127,11 @@
         showModal = false;
         NavigationManager.NavigateTo("/login");
     }
+
+    private void OnRoleChanged(ChangeEventArgs e)
+    {
+        selectedRole = e.Value?.ToString() ?? "Analyst";
+        SetUserModel();
+    }
 }
+
