name changining to visualisation component

--- a/AquAnalyzerWebApp/Components/Visualisation.razor
+++ b/AquAnalyzerWebApp/Components/Visualisation.razor
@@ -1,4 +1,4 @@
-@inherits VisualisationBase
+@inherits Visualisation
 
 <div class="visualisation">
     <h5>Visualisation Type: @VisualisationData.Type</h5>
