--- a/AquAnalyzerWebApp/Components/Visualisation.razor
+++ b/AquAnalyzerWebApp/Components/Visualisation.razor
@@ -1,4 +1,4 @@
-@inherits Visualisation
+@inherits VisualisationBase
 
 <div class="visualisation">
     <h5>Visualisation Type: @VisualisationData.Type</h5>
