--- a/AquAnalyzerWebApp/Components/Pages/Register.razor
+++ b/AquAnalyzerWebApp/Components/Pages/Register.razor
@@ -10,7 +10,7 @@
 <h1>Register</h1>
 <h5>Please fill in the details below:</h5>
 
-<EditForm Model="@newUser" OnValidSubmit="@RegisterUser" @formname="RegisterForm">
+<EditForm Model="@newUser" OnValidSubmit="@RegisterUser">
     <DataAnnotationsValidator />
     <ValidationSummary />
 
