--- a/AquAnalyzerWebApp/Components/Pages/Register.razor
+++ b/AquAnalyzerWebApp/Components/Pages/Register.razor
@@ -5,6 +5,7 @@
 @using AquAnalyzerAPI.Controllers
 @inject IAuthServiceAPI AuthService
 @inject NavigationManager NavigationManager
+@inject AuthServiceAPI AuthServiceAPI
 @rendermode InteractiveServer
 
 <h1>Register</h1>
