--- a/AquAnalyzerWebApp/Components/_Imports.razor
+++ b/AquAnalyzerWebApp/Components/_Imports.razor
@@ -6,7 +6,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using AquAnalyzerWebApp
-@using AquAnalyzerWebApp.Components
+@using System
+@using System.Linq
 @using AquAnalyzerWebApp.Interfaces
 @using AquAnalyzerAPI.Models
